--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
 /node_modules
 /.pnp
 .pnp.js
-
-# testing
 /coverage
-
-# production
 /build
-
-# misc
 .DS_Store
 .env.local
 .env.development.local
@@ -22,3 +13,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
+backend/node_modules/
+backend/package-lock.json
+frontend/node_modules/
+frontend/package-lock.json
+backend/.env
